2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MANIFEST
	* GObject.xs
	* t/lazy-loader.t: Make sure the lazy loader can handle being
	invoked on packages which aren't registered with the Glib type
	system.  This can happen when a non-registered package is setup to
	inherit from a registered package, and when then some method is
	invoked on the non-registered package.  This gets rid of the
	spurious "asked to lazy-load Foo, but that package is not
	registered" warnings.

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs:
	* GValue.xs: Handle NULL GParamSpecs in newSVGParamSpec by
	returning undef.  Consequently, remove the NULL handling in
	_gperl_sv_from_value_internal.  This partly reverts the commit
	from 2008-08-18 and brings newSVGParamSpec in line with the other
	SV* constructors.

	* GObject.xs
	* t/5.t: Fix the stack handling in Glib::Object::get to be robust
	against stack movement due to reallocation.  This can happen if a
	subclass' GET_PROPERTY triggers a stack resize.  Patch by Kevin
	Ryde.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.192.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm (postamble_docs_full): Fix the POD index
	generation.  For five months now, broken index pages (like
	Glib::index) were being created due to shell command quoting
	issues.

2008-08-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_convert_flag_one, gperl_convert_flags): Improve
	the wording of the error messages for invalid flags a bit.

	* t/4.t: Prettify a bit by using ok(), pass(), and fail()
	functions.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.191.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/e.t
	* GValue.xs (_gperl_sv_from_value_internal): Handle NULL
	GParamSpecs gracefully by returning undef.

	* GParamSpec.xs (newSVGParamSpec): Croak on NULL GParamSpecs.
